# avro-cpp

./: .gitignore  CMakeLists.txt
api/: AvroParse.hh  AvroSerialize.hh  AvroTraits.hh  Compiler.hh  DataFile.hh  Decoder.hh  Encoder.hh  Exception.hh  Generic.hh  GenericDatum.hh  Layout.hh  Node.hh  NodeConcepts.hh  NodeImpl.hh  Parser.hh  Reader.hh  Resolver.hh  ResolverSchema.hh  ResolvingReader.hh  Schema.hh  SchemaResolution.hh  Serializer.hh  Specific.hh  Stream.hh  Types.hh  ValidSchema.hh  Validator.hh  Writer.hh  Zigzag.hh
api/buffer/: Buffer.hh  BufferPrint.hh  BufferReader.hh  BufferStream.hh  BufferStreambuf.hh
api/buffer/detail/: BufferDetail.hh  BufferDetailIterator.hh
examples/: cpx.hh  custom.cc  datafile.cc  generated.cc  generic.cc  imaginary.hh  resolving.cc  schemaload.cc  validating.cc
impl/: BinaryDecoder.cc  BinaryEncoder.cc  Compiler.cc  DataFile.cc  FileStream.cc  Generic.cc  GenericDatum.cc  Node.cc  NodeImpl.cc  Resolver.cc  ResolverSchema.cc  Schema.cc  Stream.cc  Types.cc  ValidSchema.cc  Validator.cc  Zigzag.cc  avrogencpp.cc
impl/json/: JsonDom.cc  JsonDom.hh  JsonIO.cc  JsonIO.hh
impl/parsing/: JsonCodec.cc  ResolvingDecoder.cc  Symbol.cc  Symbol.hh  ValidatingCodec.cc  ValidatingCodec.hh
parser/: AvroYacc.yy
scripts/: gen-cppcode.py
test/: AvrogencppTests.cc  CodecTests.cc  CompilerTests.cc  DataFileTests.cc  JsonTests.cc  LargeSchemaTests.cc  SchemaTests.cc  SpecificTests.cc  StreamTests.cc  buffertest.cc  precompile.cc  testgentest.cc  testparser.cc  unittest.cc
test_new/: test_AvrogencppTests.cc  test_CodecTests.cc  test_CompilerTests.cc  test_DataFileTests.cc  test_JsonTests.cc  test_LargeSchemaTests.cc  test_SchemaTests.cc  test_SpecificTests.cc  test_StreamTests.cc  test_buffertest.cc  test_gentest.cc  test_json.cc  test_unittest.cc
